replace unused class

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container mt-3">
     <div class="row mt-3">
       <div class="col-sm-22 mt-3">
-        <h1 class='googleFontsHand'>We love Google Fonts!</h1>
+        <h1 style="font-family: 'Rock Salt', cursive;">We love Google Fonts!</h1>
       </div>
     </div>
     <div class="row mt-3">
