--- a/aniko.html
+++ b/aniko.html
@@ -15,7 +15,7 @@
         <h1 style="font-family: 'Rock Salt', cursive;">We love Google Fonts!</h1>
       </div>
     </div>
-    <div class="row mt-3" style="font-family: 'Amatic SC', cursive;">
+    <div class="row mt-3" style="font-family: 'Syncopate', sans-serif;">
       Hi, This is my favourite Google fonts!
     </div>
   </div>
