Added Alessio's page, linked it to index.html creating menu

--- a/index.html
+++ b/index.html
@@ -12,9 +12,43 @@
   <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Architects+Daughter&family=Bad+Script&family=Bangers&family=Bungee+Shade&family=Cabin+Sketch&family=Caveat&family=Cinzel&family=Dancing+Script&family=Great+Vibes&family=Hanalei&family=Indie+Flower&family=Italianno&family=Major+Mono+Display&family=Monofett&family=Monoton&family=New+Tegomin&family=Nosifer&family=Oi&family=Open+Sans+Condensed:wght@300&family=Orbitron&family=Pacifico&family=Poiret+One&family=Press+Start+2P&family=Rajdhani:wght@300&family=Raleway+Dots&family=Rock+Salt&family=Rye&family=Satisfy&family=Special+Elite&family=Syncopate&family=Train+One&family=Unica+One&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">  -->
   <link rel="stylesheet" href="./style.css">
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  font-size: 120%;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+  color: white;
+}
+</style>
 </head>
 
 <body>
+  <ul>
+    <li><a href="alessio.html" title="Alessio's page">Alessio</a></li>
+    <li><a href="broken_link.html">Monica</a></li>
+    <li><a href="broken_link.html">Rick</a></li>
+    <li><a href="broken_link.html">Jasbee</a></li>
+    <li><a href="broken_link.html">Jasbee</a></li>
+  </ul>
   <div class="container mt-3">
     <div class="row mt-3">
       <div class="col-sm-22 mt-3">
